# campus-orbit-api

./: .gitignore  Dockerfile  pyproject.toml  pytest.ini  test_main.http
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 26fb37064c94_create_weather_tables.py  6a9cc1520837_create_weather_tables.py  768374bba21c_academic_tables.py  7f812f428477_sync_weather_indexes.py  8a0af2d5c7ac_normalize_weather_indexes.py  9a85d9c7d23b_create_weather_tables.py  9f8fc78437ca_sync_weather_indexes.py  a0a6429066e8_academic_tables.py  b74a5838ca01_academic_tables.py  bb208a37ee90_normalize_weather_indexes.py  c7d72bfa96e8_platform_tables.py  ca6f816d92d0_add_ai_config_table.py  cb057c687fc3_drift_check.py  d1a2b3c4d5e6_add_weather_config_table.py
app/: main.py
app/api/: academic.py  geo.py  health.py  jwxt.py  weather.py
app/clients/: academic_client.py  weather_client.py  weather_clients.py
app/core/: config.py  db.py  errors.py  redis.py  session_store.py
app/db/: session.py
app/middlewares/: logging.py  request_id.py
app/models/: academic_models.py  weather_db.py  weather_models.py  weather_schemas.py
app/platform/: db_compat.py  deps.py  models.py  redis_client.py  repo.py  routes.py  schemas.py  security.py  services.py  settings.py  system_service.py  weather_utils.py
app/repositories/: academic_repo.py
app/schemas/: academic.py  academic_schemas.py  jwxt.py  weather_schemas.py
app/services/: __init__.py  academic_service.py  jwxt_service.py  weather_service.py
app/tests/: conftest.py  test_academic_health_unit.py  test_academic_login_unit.py  test_health.py  test_health_integration.py  test_weather.py  test_weather_integration.py
app/utils/: academic_crypto.py
docs/: campus_orbit_init_202512150902466wc6h.sql
scripts/: init_admin.py
